# alpha-trader

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  EXCHANGE_AWARE_IMPLEMENTATION.md  EXTENDED_HOURS_IMPLEMENTATION.md  LICENSE  MULTI_BROKER_USAGE_GUIDE.py  README.md  README_updated.md  cancel_all_orders.bat  check_after_hours.py  check_compatibility.py  cleanup_log.txt  code-review.md  config.yaml  config_no_ngrok.yaml  config_sample_logging.yaml  configure_bot.py  convert_imports.ps1  emergency_order_manager.py  emergency_position_sync.py  examples.py  fix_dependencies.bat  fix_numpy_pandas.bat  get_webhook_url.py  monitor_bot.py  plan.md  position_sync_monitor.py  pyproject.toml  pytest.ini  quick_shutdown.bat  requirements.txt  run_bot.py  run_local.bat  run_tests.py  setup.py  setup_alternative_tunnels.py  setup_environment.bat  setup_environment.sh  (+15 more)
.github/: copilot-instructions.md
.github/instructions/: business_logic.instructions.md  code_review.instructions.md  documentation.instructions.md  python_standards.instructions.md
.github/workflows/: deploy-bot.yml  deploy-ui.yml
UX-Samples/: DCA-Order-Logic.md  api-hosted-dca-ladder.md  bot-analytics.html  bot.html  my-exchanges.html  portfolio.html  trading.html
config/: .env.example  .secrets.toml.example  settings.toml
config/environments/: demo.toml  live.toml
docs/: ADAPTERS_INDEX.md  ADMIN_API.md  ARCHITECTURAL_ENHANCEMENTS_SUMMARY.md  AZURE_DEPLOYMENT.md  CONFIGURATION.md  ENHANCEMENTS_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  MARTINGALE_RISKS.md  MARTINGALE_SAFETY_SUMMARY.md  MEDIUM_PRIORITY_FIXES.md  MONITORING_ARCHITECTURE.md  QUICK_REFERENCE.md  REMAINING_FIXES_IMPLEMENTATION.md  SIGNAL_LISTENER_REFACTORING.md  TASTYTRADE_SETUP.md  TODO_TRACKING.md  USER_GUIDE.md  code-review.md
infra/: deploy.ps1  deploy.sh  main.bicep
scripts/: check_interface_imports.py  generate_typescript_types.py  migrate_add_broker.py  recover_database.py
src/: __init__.py  constants.py  exceptions.py  interfaces.py  trading_bot.py
src/config/: cli.py  (+9 more)
tests/: README.md  __init__.py  check_market_status.py  conftest.py  debug_timestamps.py  deep_price_check.py  demo_market_sessions.py  demo_simple_pricing.py  get_absolute_latest.py  run_webhook_tests.py  test_account_simple.py  test_advanced_strategy_simulation.py  test_alpaca_account.py  test_api_diagnostic.py  test_api_strategies.py  test_bot_improvements.py  test_bot_shutdown.py  test_complete_validation.py  test_comprehensive_fix.py  test_config.py  test_config_transparency.py  test_dca_functionality.py  test_dynamic_market_hours.py  test_edge_case_recovery.py  test_enhanced_dca.py  test_enhanced_extended_hours.py  test_exit_logging.py  test_extended_hours_integration.py  test_final_import_validation.py  test_fixed_market_data.py  test_hims_fix.py  test_long_short_dca.py  test_market_sessions.py  test_martingale_dca_manager.py  test_martingale_integration.py  test_martingale_scenarios.py  test_martingale_sizing.py  test_missing_price_fix.py  test_missing_price_handling.py  test_msft_debug.py  (+34 more)
trading-terminal/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+321 files in other folders)
